First test version with worker writes to Cassandra database

--- a/database_test.ipynb
+++ b/database_test.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:27.228837Z",
-     "start_time": "2018-07-19T10:19:27.220837Z"
+     "end_time": "2018-07-20T10:54:31.140894Z",
+     "start_time": "2018-07-20T10:54:30.532889Z"
     },
     "hide_input": false
    },
@@ -20,11 +20,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:28.498838Z",
-     "start_time": "2018-07-19T10:19:27.940837Z"
+     "end_time": "2018-07-20T10:54:53.451294Z",
+     "start_time": "2018-07-20T10:54:52.949101Z"
     }
    },
    "outputs": [
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:29.630957Z",
-     "start_time": "2018-07-19T10:19:29.260942Z"
+     "end_time": "2018-07-20T11:14:52.253004Z",
+     "start_time": "2018-07-20T11:14:52.006366Z"
     }
    },
    "outputs": [],
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:30.199978Z",
-     "start_time": "2018-07-19T10:19:30.195979Z"
+     "end_time": "2018-07-20T11:14:53.030068Z",
+     "start_time": "2018-07-20T11:14:53.026053Z"
     }
    },
    "outputs": [],
@@ -74,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:32.603093Z",
-     "start_time": "2018-07-19T10:19:32.589091Z"
+     "end_time": "2018-07-20T11:14:53.926062Z",
+     "start_time": "2018-07-20T11:14:53.917045Z"
     }
    },
    "outputs": [
@@ -241,7 +241,7 @@
        "8                  16  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,11 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:36.203226Z",
-     "start_time": "2018-07-19T10:19:36.189205Z"
+     "end_time": "2018-07-20T11:14:55.645479Z",
+     "start_time": "2018-07-20T11:14:55.635461Z"
     }
    },
    "outputs": [],
@@ -267,11 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:37.188245Z",
-     "start_time": "2018-07-19T10:19:37.179241Z"
+     "end_time": "2018-07-20T11:14:56.426459Z",
+     "start_time": "2018-07-20T11:14:56.419475Z"
     }
    },
    "outputs": [
@@ -518,7 +518,7 @@
        " 'ZEC/XMR': ['poloniex']}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,11 +529,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:43.866309Z",
-     "start_time": "2018-07-19T10:19:43.862305Z"
+     "end_time": "2018-07-20T10:56:09.431989Z",
+     "start_time": "2018-07-20T10:56:09.427007Z"
     },
     "scrolled": true
    },
@@ -544,11 +544,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-07-19T10:19:44.715346Z",
-     "start_time": "2018-07-19T10:19:44.711345Z"
+     "end_time": "2018-07-20T10:56:09.801331Z",
+     "start_time": "2018-07-20T10:56:09.797354Z"
     },
     "scrolled": false
    },
@@ -559,13 +559,35 @@
        "['BCH/BTC', 'BCH/ETH']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "exchanges['hitbtc2'][3:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-20T10:56:45.476723Z",
+     "start_time": "2018-07-20T10:56:45.472749Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BCH/BTC', 'BCH/ETH', 'BCH/USD', 'BTC/USD', 'BTC/USDT', 'BTG/BTC', 'BTG/USD', 'DASH/BTC', 'DASH/USD', 'DOGE/BTC', 'EOS/BTC', 'EOS/USD', 'ETC/BTC', 'ETC/USD', 'ETH/BTC', 'ETH/LTC', 'ETH/USD', 'ETH/USDT', 'LTC/BTC', 'LTC/USD', 'USDT/USD', 'XLM/BTC', 'XLM/USD', 'XMR/BTC', 'XMR/USD', 'XRP/BTC', 'XRP/USD', 'ZEC/BTC', 'ZEC/USD']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(exchanges['exmo'])"
    ]
   },
   {
